--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
-    "mocha": "^9.1.1"
+    "mocha": "^9.1.1",
+    "node-addon-api": "^4.1.0"
   },
   "dependencies": {
     "node-gyp-build": "^4.2.3"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
