--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "Node.js bindings for libddwaf",
   "main": "index.js",
+  "libddwaf_version": "1.0.7",
   "scripts": {
     "//TODO(@vlad)": "implement scripts too",
     "rebuild": "node-gyp rebuild",
@@ -28,6 +29,7 @@
   "homepage": "https://github.com/DataDog/dd-native-appsec-js#readme",
   "TODO(@cvlad)": "add engine claim",
   "devDependencies": {
+    "@hapi/wreck": "^17.1.0",
     "eslint": "^7.31.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.23.4",
@@ -38,7 +40,9 @@
     "node-addon-api": "^4.1.0"
   },
   "dependencies": {
-    "node-gyp-build": "^4.2.3"
+    "detect-libc": "^1.0.3",
+    "node-gyp-build": "^4.2.3",
+    "tar": "^6.1.11"
   },
   "engines": {
     "node": ">=12"
