--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "Node.js bindings for libddwaf",
   "main": "index.js",
   "libddwaf_version": "1.0.7",
+  "bin": {
+    "appsec-reinstall": "bin/appsec-resintall.js"
+  },
   "scripts": {
-    "//TODO(@vlad)": "implement scripts too",
+    "install": "node scripts/install.js",
     "rebuild": "node-gyp rebuild",
-    "prebuild": "node scripts/prebuild.js",
-    "prebuilds": "node scripts/prebuilds.js",
-    "prepublishOnly": "node scripts/prepublish.js",
+    "dev": "npm run rebuild && node scripts/dev.js",
+    "build-test-bundle": "npm run dev && npm t && node scripts/bundle-addon.js",
     "lint": "eslint .",
-    "test": "mocha 'test/**/*.spec.js'"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -37,14 +39,26 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
     "mocha": "^9.1.1",
-    "node-addon-api": "^4.1.0"
+    "node-addon-api": "^4.1.0",
+    "node-gyp": "^8.2.0"
   },
   "dependencies": {
     "detect-libc": "^1.0.3",
-    "node-gyp-build": "^4.2.3",
     "tar": "^6.1.11"
   },
   "engines": {
     "node": ">=12"
-  }
+  },
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "package.json",
+    "README.md",
+    "vendor/*",
+    "lib/*",
+    "LICENSE",
+    "LICENSE-3rdparty.csv",
+    "scripts/install.js",
+    "scripts/lib.js"
+  ]
 }
