--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -3,8 +3,10 @@ name: Build and release
 on:
   push:
     branches: [ main ]
+    tags: [*]
   pull_request:
     branches: [ main ]
+
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
