--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -3,7 +3,8 @@ name: Build and release
 on:
   push:
     branches: [ main ]
-    tags: ['*']
+    tags:
+      - v*
   pull_request:
     branches: [ main ]
 
