--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -61,10 +61,18 @@ jobs:
           - dockerfile: Dockerfile
             libc: glibc
             artifact: linux-x64-glibc
+            arch: x64
           - dockerfile: alpine.Dockerfile
             libc: musl
             artifact: linux-x64-musl
+            arch: x64
     steps:
+      - uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - run: |
+          echo "Platforms: ${{ steps.buildx.outputs.platforms }}"
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
