--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -53,30 +53,31 @@ jobs:
           name: ${{ matrix.target.artifact }}
           path: ${{ matrix.target.artifact }}.tgz
 
-#  cross-build:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        target:
-#          # TODO: musl x arm support
-#          # TODO: arm v7 (need upstream builds)
-#          - dockerfile: arm.Dockerfile
-#            libc: glibc
-#            arch: arm64
-#            artifact: linux-arm64-glibc
-#    steps:
-#      - uses: docker/setup-qemu-action@v1
-#      - name: docker/setup-buildx-action@v1
-#      - uses: actions/checkout@v2
-#      - uses: actions/setup-node@v2
-#        with:
-#          node-version: '14'
-#      - run: npm ci --ignore-scripts
-#      - run: node scripts/setup.js
-#        env:
-#          PLATFORM: 'linux'
-#          LIBC: ${{ matrix.target.libc }}
-#          ARCH: ${{ matrix.target.arch }}
+  cross-build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          # TODO: musl x arm support
+          # TODO: arm v7 (need upstream builds)
+          - dockerfile: arm.Dockerfile
+            libc: glibc
+            arch: arm64
+            artifact: linux-arm64-glibc
+    steps:
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm ci --ignore-scripts
+      - run: node scripts/setup.js
+        env:
+          PLATFORM: 'linux'
+          LIBC: ${{ matrix.target.libc }}
+          ARCH: ${{ matrix.target.arch }}
+      - run: ls
 #      - run: docker build -t build -f ./docker/${{ matrix.target.dockerfile }} .
 #      - run: docker run --name builder build
 #      - run: docker cp builder:/build/${{ matrix.target.artifact }}.tgz .
