--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -87,6 +87,14 @@ jobs:
       - run: npm ci
       - run: npm run ${{ matrix.run }}
 
+  cpp-lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+      - run: pip install cpplint
+      - run: cpplint --recursive ./src
+
   bundle:
     needs: ['build-native', 'build-docker']
     runs-on: ubuntu-latest
@@ -184,6 +192,7 @@ jobs:
       - tests-release-docker
       - tests-release-build-host-to-alpine
       - static-checks
+      - cpp-lint
     runs-on: ubuntu-latest
     steps:
       - run: echo '🚀🚀🚀🚀🚀'
