try to unbundle stuff in advance

--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -106,8 +106,8 @@ jobs:
       - run: mkdir -p vendor
       - run: mv artifacts/*/*.tgz vendor/
       - name: unpack
-        run: tar -xvf *.tgz
-        working-directory: vendor/
+        run: ls
+        working-directory: vendor
       - run: npm pack .
       - uses: actions/upload-artifact@v2
         with:
