--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -39,6 +39,10 @@ jobs:
         with:
           node-version: '14'
           architecture: ${{ matrix.target.arch }}
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '>3.6.0'
+          architecture: ${{ matrix.target.arch }}
       - run: npm ci --ignore-scripts
       - run: node scripts/setup.js
       - run: npm run build-test-bundle
