--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "install": "node bin/appsec-reinstall.js",
-    "rebuild": "node-gyp rebuild",
+    "rebuild": "node ./node_modules/node-gyp/bin/node-gyp.js rebuild",
     "dev": "npm run rebuild && node scripts/dev.js",
     "build-test-bundle": "npm run dev && npm t && node scripts/bundle-addon.js",
     "lint": "eslint .",
@@ -39,7 +39,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "mocha": "^9.1.1",
     "node-addon-api": "^4.1.0",
-    "node-gyp": "^8.2.0"
+    "node-gyp": "^9.0.0"
   },
   "dependencies": {
     "detect-libc": "^1.0.3",
