--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -139,7 +139,7 @@ jobs:
             artifact: win32-x64-unknown
             arch: x64
           - name: windows 32 bits
-            os: windows-latest
+            os: windows-2022
             artifact: win32-ia32-unknown
             arch: x86
           - name: windows 32 bits on 64 bits
