--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@datadog/native-appsec",
-  "version": "1.2.1",
+  "version": "2.0.0-alpha0",
   "description": "Node.js bindings for libddwaf",
   "main": "index.js",
-  "libddwaf_version": "1.4.0",
+  "libddwaf_version": "1.5.0-alpha0",
   "bin": {
     "appsec-reinstall": "bin/appsec-reinstall.js"
   },
