--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0-alpha0",
   "description": "Node.js bindings for libddwaf",
   "main": "index.js",
-  "libddwaf_version": "1.5.0-alpha0",
+  "libddwaf_version": "1.5.0",
   "bin": {
     "appsec-reinstall": "bin/appsec-reinstall.js"
   },
