--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "index.js",
     "index.d.ts",
     "package.json",
-    "package-lock.json",
     "README.md",
     "LICENSE",
-    "LICENSE-3rdparty.csv"
+    "LICENSE-3rdparty.csv",
+    "prebuilds/**/*"
   ]
 }
