--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "Node.js bindings for libddwaf",
   "main": "index.js",
   "libddwaf_version": "1.4.0",
-  "bin": {
-    "appsec-reinstall": "bin/appsec-reinstall.js"
-  },
   "scripts": {
-    "install": "node bin/appsec-reinstall.js",
-    "rebuild": "node ./node_modules/node-gyp/bin/node-gyp.js rebuild",
-    "dev": "npm run rebuild && node scripts/dev.js",
-    "build-test-bundle": "npm run dev && npm t && node scripts/bundle-addon.js",
+    "install": "exit 0",
+    "rebuild": "node-gyp rebuild",
+    "postrebuild": "node scripts/postrebuild",
     "lint": "eslint .",
     "test": "mocha",
     "licenses": "node scripts/check_licenses.js"
@@ -39,12 +35,10 @@
     "eslint-plugin-standard": "^5.0.0",
     "mocha": "^9.1.1",
     "node-addon-api": "^4.1.0",
-    "node-gyp": "^9.0.0"
+    "tar": "^6.1.11"
   },
   "dependencies": {
-    "detect-libc": "^1.0.3",
-    "minimist": "^1.2.6",
-    "tar": "^6.1.11"
+    "node-gyp-build": "^3.9.0"
   },
   "engines": {
     "node": ">=12"
@@ -54,11 +48,8 @@
     "index.d.ts",
     "package.json",
     "README.md",
-    "vendor/*",
-    "lib/*",
-    "bin/*",
     "LICENSE",
     "LICENSE-3rdparty.csv",
-    "scripts/lib.js"
+    "prebuilds/**/*"
   ]
 }
