--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,8 @@
-name: Build and release
+name: Build
 
 on:
   push:
     branches: [ main ]
-    tags:
-      - v*
   pull_request:
     branches: [ main ]
 
