--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,11 +62,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.package.outputs.version }}
-          release_name: Release ${{ steps.package.outputs.version }}
+          release_name: ${{ steps.package.outputs.version }}
           body: |
             Release
           draft: false
-          prerelease: false
       - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
