--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,10 +83,8 @@ jobs:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/download-artifact@v3
-        with:
-          name: datadog-native-appsec-${{ steps.package.outputs.version }}
-          path: datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
       - uses: actions/setup-node@v3
         with:
           registry-url: 'https://registry.npmjs.org'
+      - run: ls -l
       - run: npm publish --dry-run
