--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         id: package
       - uses: actions/upload-artifact@v3
         with:
-          name: datadog-native-appsec-${{ steps.package.outputs.version }}
+          name: datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
           path: datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
 
   create_release:
@@ -65,7 +65,6 @@ jobs:
           release_name: ${{ steps.package.outputs.version }}
           body: |
             Release
-          draft: false
       - uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -82,8 +81,9 @@ jobs:
     env:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
       - uses: actions/setup-node@v3
         with:
           registry-url: 'https://registry.npmjs.org'
-      - run: npm publish
+      - run: npm publish --dry-run
