--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,7 @@ jobs:
       napi: true
       package-manager: 'npm'
       postbuild: 'node scripts/postbuild'
+      skip: 'linux-arm linux-ia32'
       target-name: 'appsec'
 
   static-checks:
