--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
       napi: true
       package-manager: 'npm'
       postbuild: 'node scripts/postbuild'
+      skip: 'linux-arm linux-ia32'
       target-name: 'appsec'
 
   pack:
