--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
+      - run: npm version --no-git-tag-version ${{ steps.package.outputs.version }}-$(git rev-parse --short HEAD)+${{ github.run_id }}.${{ github.run_attempt }}
+      - run: npm publish --tag dev
       - run: npm pack
       - uses: codex-team/action-nodejs-package-info@v1.1
         id: package
@@ -61,4 +63,4 @@ jobs:
         with:
           registry-url: 'https://registry.npmjs.org'
       - run: npm version
-      - run: npm publish ./datadog-native-appsec-${{ steps.package.outputs.version }}.tgz --dry-run --provenance
+      - run: npm publish ./datadog-native-appsec-${{ steps.package.outputs.version }}.tgz --tag test --provenance
