--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
     needs: download-libddwaf
     uses: Datadog/action-prebuildify/.github/workflows/build.yml@julio/fix-unsafe-option
     with:
-      cache: true
+      cache: false
       napi: true
       package-manager: 'npm'
       postbuild: 'node scripts/postbuild'
