Enable cache and use prebuildify main branch.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,9 @@ jobs:
 
   build:
     needs: download-libddwaf
-    uses: Datadog/action-prebuildify/.github/workflows/build.yml@julio/fix-unsafe-option
+    uses: Datadog/action-prebuildify/.github/workflows/build.yml@main
     with:
-      cache: false
+      cache: true
       napi: true
       package-manager: 'npm'
       postbuild: 'node scripts/postbuild'
