--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,22 @@ jobs:
       target-name: 'appsec'
       min-node-version: 16
 
+  pack:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v4
+        with:
+          name: prebuilds
+      - run: npm pack
+      - uses: codex-team/action-nodejs-package-info@v1.1
+        id: package
+      - uses: actions/upload-artifact@v4
+        with:
+          name: datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
+          path: datadog-native-appsec-${{ steps.package.outputs.version }}.tgz
+
   static-checks:
     strategy:
       matrix:
