--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Test
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
       cache: true
       napi: true
       package-manager: 'npm'
-      postbuild: 'node scripts/postbuild'
+      postbuild: 'node scripts/postbuild && npm ci && npm test'
       skip: 'linux-arm,linux-ia32'
       target-name: 'appsec'
       min-node-version: 16
@@ -42,15 +42,15 @@ jobs:
           - licenses
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - run: npm ci
       - run: npm run ${{ matrix.run }}
 
   cpp-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
       - run: pip install cpplint
       - run: cpplint --linelength=120 --recursive ./src
